--- a/views/app.ejs
+++ b/views/app.ejs
@@ -1,15 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-    <%- include('layouts/header') %>
-    <div class="content">
-        <%- body %> 
-    </div>
-    <%- include('layouts/footer') %>
-
-</body>
-</html>
+<%- include('layouts/header') %>
+<div class="content"><%- body %></div>
+<%- include('layouts/footer') %>
